--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Reusable Visual Power</title>
+    <title>UPS Box Animation | Amber Dunn</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
